--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -18,7 +18,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(/images/mobile/hero/header_img.jpg);
+    url("../../images/mobile/hero/header_img.jpg");
 
   &__text {
     margin-bottom: 30px;
@@ -63,7 +63,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/images/mobile/hero/header_img@2x.jpg);
+      url("../../images/images/mobile/hero/header_img@2x.jpg");
   }
 }
 
@@ -74,7 +74,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/tablet/hero/header_img.jpg);
+      url("../../images/tablet/hero/header_img.jpg");
   }
 }
 
@@ -88,7 +88,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/tablet/hero/header_img@2x.jpg);
+      url("../../images/tablet/hero/header_img@2x.jpg");
   }
 }
 
@@ -113,7 +113,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../../images/pc/hero/header_img@2x.jpg);
+      url("../../images/pc/hero/header_img@2x.jpg");
   }
 }
 
