поправив секцію клієнти

--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,9 +1,15 @@
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.section_mob {
   padding-top: 60px;
   padding-bottom: 60px;
+  margin-right: auto;
+  margin-left: auto;
 }
+
+// @media screen and (max-width: 767px) {
+  
+
+// .section_mob {
+//   padding-top: 60px;
+//   padding-bottom: 60px;
+// }
+// }
