--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,11 +5,11 @@
   background: #2f303a;
 }
 
-.container {
+// .container {
   
-  padding-right: 15px;
-  padding-left: 15px;
-}
+//   padding-right: 15px;
+//   padding-left: 15px;
+// }
 
 .contacts-nav {
   margin-top: 20px;
