--- a/css/main.css
+++ b/css/main.css
@@ -63,25 +63,24 @@ img {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.section_mob {
   padding-top: 60px;
   padding-bottom: 60px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 1px solid red;
 }
 
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
-    margin: 0 auto;
   }
 }
 
@@ -1050,8 +1049,8 @@ img {
 }
 
 .section.clients {
-  padding-top: 71px;
-  padding-bottom: 49px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .company {
@@ -1106,10 +1105,6 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
   .company__link {
     width: 226px;
   }
@@ -1128,7 +1123,7 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
-  .section {
+  .section.clients {
     padding-top: 94px;
     padding-bottom: 94px;
   }
@@ -1153,11 +1148,6 @@ img {
   padding-top: 60px;
   text-align: center;
   background: #2f303a;
-}
-
-.container {
-  padding-right: 15px;
-  padding-left: 15px;
 }
 
 .contacts-nav {
@@ -1313,7 +1303,7 @@ img {
 }
 
 .filter-nav__item:not(:first-child) {
-  margin-left: 8px;
+  margin-right: 8px;
   margin-bottom: 15px;
 }
 
@@ -1327,7 +1317,7 @@ img {
 }
 
 .projects__item {
-  width: 450px;
+  max-width: 450px;
   transition: box-shadow 250ms var(--timing-function);
 }
 
