--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -2,15 +2,15 @@
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-
-  // outline: 1px solid red;
+margin-left: auto;
+margin-right: auto;
+  outline: 1px solid red;
 }
 
 // 480+
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
-    margin: 0 auto;
   }
 }
 
