--- a/css/main.css
+++ b/css/main.css
@@ -1302,14 +1302,9 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.filter-nav__item:not(:first-child) {
+.filter-nav__item {
   margin-right: 8px;
   margin-bottom: 15px;
-}
-
-.filter-nav__item:nth-child(4) {
-  margin-left: 0;
-  margin-bottom: 40px;
 }
 
 .filter-nav__item:nth-child(5) {
