--- a/css/main.css
+++ b/css/main.css
@@ -376,13 +376,18 @@ img {
   top: 50%;
   left: 50%;
   padding: 40px;
-  width: 450px;
-  height: 609px;
   background-color: var(--primary-white-color);
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms var(--timing-function);
+}
+
+@media screen and (max-width: 1199px) {
+  .modal {
+    width: 100%;
+    max-width: 450px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -413,7 +418,7 @@ img {
 }
 
 .contact-form {
-  width: 370px;
+  width: 100%;
   height: auto;
   margin: 0 auto;
 }
@@ -436,12 +441,6 @@ img {
   color: var(--primary-text-color);
 }
 
-@media screen and (min-width: 1200px) {
-  .contact-form {
-    width: 448px;
-  }
-}
-
 .contact-form-label {
   position: relative;
   display: block;
@@ -450,7 +449,7 @@ img {
 
 .contact-form-input {
   outline: none;
-  width: 370px;
+  width: 100%;
   height: 40px;
   padding: 0 0 0 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -568,12 +567,10 @@ img {
 
 .contacts-form-btn {
   outline: none;
-  position: absolute;
   left: 125px;
   bottom: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: block;
+  margin: 0 auto;
   /* margin-top: 30px; */
   padding: 0;
   width: 200px;
