--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,5 +1,5 @@
 .contact-form {
-  width: 370px;
+  width: 100%;
   height: auto;
   margin: 0 auto;
 
@@ -28,7 +28,7 @@
 
 @media screen and (min-width: 1200px) {
   .contact-form {
-    width: 448px;
+    // width: 448px;
   }
 }
 // .contact-form {
@@ -67,7 +67,8 @@
 
 .contact-form-input {
   outline: none;
-  width: 370px;
+  width: 100%;
+  // width: 370px;
   height: 40px;
   padding: 0 0 0 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -202,12 +203,11 @@
 
 .contacts-form-btn {
   outline: none;
-  position: absolute;
+  
   left: 125px;
   bottom: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: block;
+ margin: 0 auto;
   /* margin-top: 30px; */
   padding: 0;
   width: 200px;
