--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -6,8 +6,8 @@
 
   padding: 40px;
 
-  width: 450px;
-  height: 609px;
+  // width: 450px;
+  // height: 609px;
   background-color: var(--primary-white-color);
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -17,7 +17,13 @@
   transition: transform 250ms var(--timing-function);
 }
 
-
+@media screen and (max-width: 1199px) {
+ .modal {
+  width: 100%;
+  max-width: 450px;
+  
+ }
+}
 
 @media screen and (min-width: 1200px) {
   .modal {
