--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -143,7 +143,7 @@
 
 .checkbox-icon {
   position: relative;
-  width: 16px;
+  min-width: 16px;
   height: 15px;
   border: 2px solid var(--title-text-color);
   border-radius: 2px;
