--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -4,7 +4,7 @@
   padding-right: 15px;
 margin-left: auto;
 margin-right: auto;
-  outline: 1px solid red;
+  // outline: 1px solid red;
 }
 
 // 480+
