--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -5,11 +5,9 @@
   margin-left: auto;
 }
 
-// @media screen and (max-width: 767px) {
-  
-
-// .section_mob {
-//   padding-top: 60px;
-//   padding-bottom: 60px;
-// }
-// }
+@media screen and (min-width: 1200px) {
+  .section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+}
