--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -38,8 +38,14 @@
   }
 
   &__item {
-    margin-bottom: 30px;
+  margin-bottom: 30px
+}
+
+  &__item:nth-child(5),
+  &__item:nth-child(6) {
+    margin-bottom: 0;
   }
+
 
   &__item:nth-child(2n + 1) {
     margin-right: 30px;
@@ -73,13 +79,13 @@
       margin: 16px 60px;
     }
 
-    &__item:nth-child(2) {
+       &__item {
       margin-right: 30px;
     }
 
-    &__item {
-      margin-right: 30px;
-    }
+&__item:nth-child(4) {
+  margin-bottom: 0;
+}
 
     &__item:nth-child(3),
     &__item:nth-child(6) {
@@ -111,6 +117,10 @@
 
     &__item:not(:last-child) {
       margin-right: 30px;
+    }
+
+    &__item {
+      margin-bottom: 0;
     }
   }
 }
