--- a/css/main.css
+++ b/css/main.css
@@ -875,11 +875,19 @@ img {
   }
 }
 
+.value.section {
+  padding-bottom: 0;
+}
+
 .advantages__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+}
+
+.advantages__item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 .advantages__thumb {
@@ -911,6 +919,9 @@ img {
   .advantages__item {
     width: 354px;
   }
+  .advantages__item:nth-child(3) {
+    margin-bottom: 0;
+  }
   .advantages__thumb {
     display: flex;
     width: 354px;
@@ -927,6 +938,9 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
+  .advantages {
+    margin-bottom: -30px;
+  }
   .advantages__thumb {
     width: 270px;
   }
@@ -935,6 +949,9 @@ img {
   }
   .advantages__item {
     width: 270px;
+  }
+  .advantages__text {
+    margin-bottom: 0;
   }
 }
 
@@ -1037,6 +1054,7 @@ img {
   }
   .team__item {
     width: 270px;
+    margin-bottom: 0;
   }
   .team__item:not(:last-child) {
     margin-right: 30px;
@@ -1263,9 +1281,11 @@ img {
 @media screen and (min-width: 1200px) {
   .container-decktop {
     display: flex;
+    align-items: baseline;
   }
   .tablet {
     display: flex;
+    align-items: baseline;
     text-align: start;
   }
   .thumb {
@@ -1279,6 +1299,9 @@ img {
   }
   .footer-title {
     text-align: start;
+  }
+  .contacts-nav {
+    margin-bottom: 0;
   }
 }
 
