--- a/css/main.css
+++ b/css/main.css
@@ -1334,12 +1334,12 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.filter-nav__item {
+.filter-nav__item:not(:last-child) {
   margin-right: 8px;
   margin-bottom: 15px;
 }
 
-.filter-nav__item:nth-child(5) {
+.filter-nav__item:nth-child(n + 4) {
   margin-bottom: 40px;
 }
 
@@ -1411,6 +1411,12 @@ img {
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
+  }
+  .filter-nav__item:nth-child(-n + 3) {
+    margin-bottom: 0;
+  }
+  .filter-nav__item:nth-child(n + 4) {
+    margin-bottom: 0;
   }
   .projects {
     display: flex;
