--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -34,7 +34,7 @@
     }
   }
 
-  &__item {
+  &__item:not(:last-child) {
     margin-right: 8px;
     margin-bottom: 15px;
   }
@@ -44,7 +44,7 @@
   //   margin-bottom: 40px;
   // }
 
-  &__item:nth-child(5) {
+  &__item:nth-child(n + 4) {
     margin-bottom: 40px;
   }
 }
@@ -126,12 +126,21 @@
   color: var(--primary-white-color);
 }
 
+
 @media screen and (min-width: 768px) {
-  .filter-nav {
+   .filter-nav {
     padding-left: 0;
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
+
+    &__item:nth-child(-n + 3) {
+      margin-bottom: 0;
+    }
+
+    &__item:nth-child(n + 4) {
+    margin-bottom: 0;
+  }
   }
 
   .projects {
