--- a/css/main.css
+++ b/css/main.css
@@ -348,8 +348,10 @@ img {
   border-top: 0;
 }
 
-.projects__description_big {
-  padding: 20px 24px 56px 24px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .projects__description_big {
+    padding: 20px 24px 56px 24px;
+  }
 }
 
 .modal-backdrop {
