--- a/sass/components/_description.scss
+++ b/sass/components/_description.scss
@@ -9,6 +9,8 @@
   border-top: 0;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
 .projects__description_big {
   padding: 20px 24px 56px 24px;
+}
 }
