--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,7 @@ img {
 
 @media screen and (max-width: 767px) {
   .mobile-menu {
+    display: flex;
     z-index: 9;
     position: fixed;
     top: 0;
@@ -145,9 +146,6 @@ img {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-  }
-  .mobile-menu__nav {
-    margin-bottom: 302px;
   }
   .mobile-menu__item {
     margin-left: 28px;
@@ -211,6 +209,13 @@ img {
     color: var(--accent-color);
     margin-bottom: 32px;
   }
+}
+
+.testa {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 @media screen and (min-width: 768px) {
