--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,5 +1,6 @@
 @media screen and (max-width: 767px) {
   .mobile-menu {
+    display: flex;
     z-index: 9;
     position: fixed;
     top: 0;
@@ -16,10 +17,7 @@
     visibility: hidden;
     pointer-events: none;
 
-    &__nav {
-      margin-bottom: 302px;
-    }
-
+   
     &__item {
       margin-left: 28px;
     }
@@ -29,6 +27,7 @@
       margin-bottom: 32px;
     }
 
+    
     &__link {
       font-weight: 500;
       font-size: 40px;
@@ -103,6 +102,13 @@
 
     margin-bottom: 32px;
   }
+}
+
+.testa {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+ height: 100%;
 }
 
 @media screen and (min-width: 768px) {
